--- a/Library.Net.Outopos/Library.Net.Outopos.csproj
+++ b/Library.Net.Outopos/Library.Net.Outopos.csproj
@@ -108,15 +108,15 @@
     <Compile Include="Cache\_Interface\Information\Common\Items\Unicast\IUnicastHeader.cs" />
     <Compile Include="Cache\_Interface\Information\Options\Items\Unicast\IUnicastOptions.cs" />
     <Compile Include="Cache\_Interface\Information\Options\Items\Broadcast\IBroadcastOptions.cs" />
-    <Compile Include="Cache\Information\Message\Items\Anchor.cs" />
-    <Compile Include="Cache\Information\Message\Items\AnchorCollection.cs" />
-    <Compile Include="Cache\Information\Message\Items\Multicast\WikiDocument.cs" />
-    <Compile Include="Cache\Information\Message\Items\WikiPageCollection.cs" />
+    <Compile Include="Cache\Information\Package\Items\Anchor.cs" />
+    <Compile Include="Cache\Information\Package\Items\AnchorCollection.cs" />
+    <Compile Include="Cache\Information\Package\Items\Multicast\WikiDocument.cs" />
+    <Compile Include="Cache\Information\Package\Items\WikiPageCollection.cs" />
     <Compile Include="Cache\_Interface\Information\Content\Items\Broadcast\IProfileContent.cs" />
     <Compile Include="Cache\_Interface\Information\Content\Items\IAnchor.cs" />
-    <Compile Include="Cache\Information\Message\Items\Multicast\ChatMessage.cs" />
-    <Compile Include="Cache\Information\Message\Items\Multicast\ChatTopic.cs" />
-    <Compile Include="Cache\Information\Message\Items\WikiPage.cs" />
+    <Compile Include="Cache\Information\Package\Items\Multicast\ChatMessage.cs" />
+    <Compile Include="Cache\Information\Package\Items\Multicast\ChatTopic.cs" />
+    <Compile Include="Cache\Information\Package\Items\WikiPage.cs" />
     <Compile Include="Cache\Information\Metadata\Items\Multicast\ChatMessageMetadata.cs" />
     <Compile Include="Cache\Information\Metadata\Items\Broadcast\ProfileMetadata.cs" />
     <Compile Include="Cache\Information\Common\Items\Chat.cs" />
@@ -131,8 +131,8 @@
     <Compile Include="Cache\_Interface\Information\Content\Items\Multicast\IChatMessageContent.cs" />
     <Compile Include="Cache\_Interface\Information\Content\Items\Unicast\ISignatureMessageContent.cs" />
     <Compile Include="OutoposConverter.cs" />
-    <Compile Include="Cache\Information\Message\Items\Unicast\SignatureMessage.cs" />
-    <Compile Include="Cache\Information\Message\Items\Broadcast\Profile.cs" />
+    <Compile Include="Cache\Information\Package\Items\Unicast\SignatureMessage.cs" />
+    <Compile Include="Cache\Information\Package\Items\Broadcast\Profile.cs" />
     <Compile Include="Cache\Information\Metadata\Items\Key.cs" />
     <Compile Include="Cache\Information\Metadata\Items\KeyCollection.cs" />
     <Compile Include="Cache\_Interface\IComputeHash.cs">
@@ -160,7 +160,6 @@
     <Compile Include="ConnectionFilter.cs" />
     <Compile Include="ConnectionsManager.cs" />
     <Compile Include="UploadItem.cs" />
-    <Compile Include="Utilities\Comparer.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Utilities\ItemUtilities.cs" />
     <Compile Include="MessagesManager.cs" />
