--- a/Library.Net/Library.Net.csproj
+++ b/Library.Net/Library.Net.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cap\CapBase.cs" />
+    <Compile Include="Cap\Cap.cs" />
     <Compile Include="Table\INode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table\Kademlia.cs" />
