--- a/Library.UnitTest/Library.UnitTest.csproj
+++ b/Library.UnitTest/Library.UnitTest.csproj
@@ -52,18 +52,13 @@
     </Reference>
     <Reference Include="System.Data">
     </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-    </Reference>
-    <Reference Include="System.Drawing">
-    </Reference>
     <Reference Include="System.Net">
     </Reference>
     <Reference Include="System.Runtime.Serialization">
     </Reference>
     <Reference Include="System.ServiceModel">
     </Reference>
-    <Reference Include="System.Windows.Forms">
-    </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
     </Reference>
     <Reference Include="System.Xml.Linq">
