--- a/Common/C++/Library_Security/Library_Security/Makefile
+++ b/Common/C++/Library_Security/Library_Security/Makefile
@@ -9,7 +9,7 @@ SRCS = Crc32_Castagnoli.cpp
 OBJS := $(SRCS:.cpp=.o)
 
 TARGET = Library_Security.so
-BUILD = ./build
+BUILD = ../build
 
 .PHONY: all clean
 .SUFFIXES: .c .cpp .o
